# FFmpeg-Matplotlib

./: .gitignore  .pre-commit-config.yaml  Changelog.md  README.md  exemplo_ffmpeg.py  ffmpeg_config.py  pyproject.toml  structure_verification.py  test_manual.py  validade_all.py
.github/workflows/: tests.yml
examples/: basic_usage.py  heliocentric_system.py
src/ffmpeg_matplotlib/: __init__.py  config.py
tests/: conftest.py  test_config.py  test_detector.py
venvvenv/Scripts/activate/: pyvenv.cfg
venvvenv/Scripts/activate/Scripts/: activate  activate.bat
